--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3.1'
 
 services:
   web:
-    image: openjdk:17-jdk-alpine
+    image: abdumalik007/quote-api:1.0
     ports:
       - "8080:8080"
